# src/main/java/com/perficient/shoppingcart/infrastructure/api/controllers/PaymentMethodController.java
@@ -1,8 +1,7 @@
 package com.perficient.shoppingcart.infrastructure.api.controllers;
 
-import com.perficient.shoppingcart.application.api.controller.PaymentApi;
 import com.perficient.shoppingcart.application.api.controller.PaymentMethodApi;
-import com.perficient.shoppingcart.application.api.model.PaymentSummary;
+import com.perficient.shoppingcart.application.api.model.PaymentMethod;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
@@ -15,8 +14,9 @@ import java.util.List;
  */
 @RestController
 @Validated
-public class PaymentMethodController implements PaymentMethodApi {
-    public ResponseEntity<List<PaymentSummary>> getPaymentSummary(String customerId, String paymentMethodId) {
+public class PaymentMethodController /* implements PaymentMethodApi */ {
+    public ResponseEntity<List<PaymentMethod>> getPaymentMethods(Integer offset, Integer limit,
+                                                                 String code, String name) {
         return new ResponseEntity<>(HttpStatus.CREATED);
     }
 }
